ds.yaml
  apiVersion: apps/v1
  kind: DaemonSet
  metadata:
    labels:
      app.kubernetes.io/instance: nginx
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: nginx
      app.kubernetes.io/version: 1.16.0
      helm.sh/chart: nginx-0.0.11
    name: nginx-controller
    namespace: nginx
  spec:
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app.kubernetes.io/name: nginx
    template:
      metadata:
        creationTimestamp: null
        labels:
          app.kubernetes.io/name: nginx
      spec:
        automountServiceAccountToken: true
        hostNetwork: true
        containers:
        - name: nginx
          image: nginx:latest
          ports:
          - containerPort: 80
